# EduSlot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: sample_load.json  sample_preferences.json
docs/source/: api.md  architecture.md  conf.py  examples.md  index.md  input_output.md  installation.md  limitations.md  quickstart.md
src/eduslot/: __init__.py  cli.py  demo.py  diagnostics.py  exporter.py  io.py  metrics.py  models.py  parser.py  planning.py  solver.py  time_grid.py  validators.py
tests/: test_cli.py  test_demo.py  test_diagnostics.py  test_exporter.py  test_io.py  test_metrics.py  test_models.py  test_parser.py  test_planning.py  test_solver.py  test_time_grid.py  test_validators.py
